@@ -582,3 +582,5 @@ contributors:
 * Harshil (harshil21): contributor
 
 * Felix von Drigalski (felixvd): contributor
+
+* Jake Lishman (jakelishman): contributor
